tests/models/struct/named/u32/fail/max_items.rs
use dade::model;
#[model]
struct TestModel {
    #[field(max_items = 2)]
    value: u32,
}
fn main() {}
